--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,7 @@ img {
   width: 48px;
   height: 48px;
   border: 0;
-  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
+  background-image: url('https://www.flaticon.com/svg/vstatic/svg/3917/3917061.svg?token=exp=1675867390~hmac=12e8e3ea2876b49dca346e904e319fa1');
   background-size: 40%;
   background-repeat: no-repeat;
   background-position: center;
@@ -182,6 +182,7 @@ img {
 */
 .Button {
   padding: 8px 16px;
+  margin: 12px auto;
   border-radius: 2px;
   background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -204,4 +205,15 @@ img {
 .Button:hover,
 .Button:focus {
   background-color: #303f9f;
+}
+
+.Wrapper {
+  text-align: center;
+}
+
+.ErrorText {
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center;
+  color: red;
 }
